[tool.poetry]
name = "stress-cmr"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
typer = "^0.4.1"
numpy = "^1.22.4"
pandas = "^1.4.2"
scipy = "^1.8.1"
lifelines = "^0.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
